@@ -783,6 +783,10 @@
         <col id="0" translatable="yes">Stretch and crop to fill the monitor area</col>
         <col id="1">5</col>
       </row>
+      <row>
+        <col id="0" translatable="yes">Stretch to fill the complete screen</col>
+        <col id="1">6</col>
+      </row>
     </data>
   </object>
 </interface>
